--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -17,9 +17,5 @@ spring:
       enabled: true
       path: /h2-console
 jwt:
-  secret: your_jwt_secret_key
+  secret: banana
   expiration:  36000000 # Example: 10 hours in milliseconds
-  # 20000 # Example: 20 seconds
-
-
-
